# ds_cinder

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  README.txt  Updating_to_0.8.6.md  build.bat  interface_xml_params.md
example/: CMakeLists.txt
example/all_projects/: CMakeLists.txt  README.md
example/all_projects/install/: apphost.json  build_app.ps1  download_apphost.ps1  download_dsnode.ps1  full_starter.iss
example/all_projects/settings/: engine.xml  physics.xml
example/all_projects/src/: stdafx.h
example/all_projects/vs2019/: all_projects.sln  all_projects.vcxproj  all_projects.vcxproj.filters
example/animation/: CMakeLists.txt
example/animation/settings/: engine.xml
example/animation/src/: AnimationApp.cpp
example/animation/vc10/: Animation.sln  Animation.vcxproj
example/animation/vs2013/: Animation.sln  Animation.vcxproj  Animation.vcxproj.filters
example/animation/vs2015/: Animation.vcxproj  Animation.vcxproj.filters
example/animation/vs2019/: Animation.sln  Animation.vcxproj  Animation.vcxproj.filters
example/audio_particles/: CMakeLists.txt
example/audio_particles/settings/: app_settings.xml  engine.xml  text.xml
example/audio_particles/vs2013/: image_threading.sln  image_threading.vcxproj  image_threading.vcxproj.filters
example/audio_particles/vs2015/: image_threading.sln  image_threading.vcxproj  image_threading.vcxproj.filters
example/automator/: CMakeLists.txt
example/automator/settings/: engine.xml
example/automator/src/: AutomatorApp.cpp
example/automator/vs2013/: Automator.sln  Automator.vcxproj  Automator.vcxproj.filters
example/automator/vs2015/: Automator.sln  Automator.vcxproj  Automator.vcxproj.filters
example/cef_develop/: CMakeLists.txt
example/cef_develop/settings/: engine.xml  fonts.xml  text.xml
example/cef_develop/vs2013/: cef_develop.sln  cef_develop.vcxproj  cef_develop.vcxproj.filters
example/cef_develop/vs2015/: cef_develop.sln  cef_develop.vcxproj  cef_develop.vcxproj.filters
example/circle_crop_example/: CMakeLists.txt
example/circle_crop_example/settings/: engine.xml
example/circle_crop_example/vs2013/: circle_crop_example.sln  circle_crop_example.vcxproj  circle_crop_example.vcxproj.filters
example/circle_crop_example/vs2015/: circle_crop_example.sln  circle_crop_example.vcxproj  circle_crop_example.vcxproj.filters
example/clock_and_weather/: CMakeLists.txt  README.md
example/clock_and_weather/install/: apphost.json  build_app.ps1  clock_and_weather.iss
example/clock_and_weather/settings/: app_settings.xml  engine.xml  fonts.xml  text.xml
example/clock_and_weather/vs2015/: clock_and_weather.sln  clock_and_weather.vcxproj  clock_and_weather.vcxproj.filters
example/data_and_query/: CMakeLists.txt
example/data_and_query/settings/: app_settings.xml  colors.xml  engine.xml  fonts.xml  text.xml
example/data_and_query/vs2013/: data_and_query.sln  data_and_query.vcxproj  data_and_query.vcxproj.filters
example/data_and_query/vs2015/: data_and_query.sln  data_and_query.vcxproj  data_and_query.vcxproj.filters
example/drag_destination_example/: CMakeLists.txt  CMakeSettings.json
example/drag_destination_example/settings/: engine.xml  text.xml
example/drag_destination_example/vs2013/: drag_destination_example.sln  drag_destination_example.vcxproj  drag_destination_example.vcxproj.filters
example/drag_destination_example/vs2015/: drag_destination_example.sln  drag_destination_example.vcxproj  drag_destination_example.vcxproj.filters
example/drop_shadow/settings/: engine.xml  nine_patch.xml
example/drop_shadow/src/: starter_app.cpp
example/drop_shadow/vc10/: drop_shadow.filters  drop_shadow.sln  drop_shadow.vcxproj
example/drop_shadow/vs2013/: Resources.aps  drop_shadow.sln  drop_shadow.vcxproj
example/example_1/data/: example_db.sqlite  example_settings.xml
example/example_1/settings/: debug.xml  engine.xml  engine_settings.xml
example/example_1/src/: Example1App.cpp
example/example_1/vc10/: Example1.sln  Example1.vcxproj
example/example_1/vs2013/: Example1.sln  Example1.vcxproj  Example1.vcxproj.filters
example/example_client_and_server/: CMakeLists.txt
example/example_client_and_server/docs/: Client and Server.txt
example/example_client_and_server/src/: ExampleApp.cpp  custom_sprite.cpp  custom_sprite.h  example_app.cpp  example_app.h
example/example_client_and_server/vc10_client/: Client.sln
example/example_client_and_server/vc10_project/: Example_C_and_S.vcxproj
example/example_client_and_server/vc10_server/: Server.sln
example/example_client_and_server/vs2013_project/: Example_C_and_S.vcxproj  Example_C_and_S.vcxproj.filters
example/example_client_and_server/vs2013_server/: Server.sln
example/finger_drawing/: CMakeLists.txt  CMakeSettings.json
example/finger_drawing/settings/: colors.xml  (+4 more)
example/flexbox/: CMakeLists.txt  README.md
example/full_starter/: .gitignore  CmakeLists.txt  README.md
example/generic_data_model/: CMakeLists.txt
example/getting_started/: CMakeLists.txt  README.md
example/glitch_shaders/: CMakeLists.txt
example/globe/: CMakeLists.txt
example/https_example/: CMakeLists.txt
example/keyboard_example/: CMakeLists.txt
example/layout_example/: CMakeLists.txt
example/media_slideshow/: CMakeLists.txt
example/media_viewer/: CMakeLists.txt
example/mqtt_example/: CMakeLists.txt
example/observers/: .gitignore  README.md
example/pango/: CMakeLists.txt  markdown_sample.md
example/panoramic_video/: CMakeLists.txt
example/particle_effects/: CMakeLists.txt  README.md
example/pdf/: CMakeLists.txt  README.md
example/perspective_picking/: CMakeLists.txt
example/physics_example/: CMakeLists.txt
example/png_sequence_example/: CMakeLists.txt
example/python_example/: python_example.py
example/scroll_example/: CMakeLists.txt  README.md
example/starter/: CMakeLists.txt
example/sync_video_player/: CMakeLists.txt  debug.txt
example/text_resize_example/: CMakeLists.txt  README.md
example/web_example/: CMakeLists.txt
(+3146 files in other folders)
